--- a/styles.css
+++ b/styles.css
@@ -588,3 +588,162 @@ html::-webkit-scrollbar-thumb {
     width: 100%;
   }
 }
+
+*,
+*:before,
+*:after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.popup{
+    position: fixed;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+    border-radius: 8px;
+    font-family: "Poppins",sans-serif;
+    text-align: center;
+    display: none;
+    background: linear-gradient(115deg, black 10%, white 90%);
+    width: 410px;
+    padding: 30px;
+    box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    z-index: 200;
+}
+#close{
+    display: block;
+    margin:  -30px 0 0 350px;
+    background-color: transparent;
+    font-size: 30px;
+    color: #000;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    position: absolute;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  outline: none;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+.show-btn{
+  background: #fff;
+  padding: 10px 20px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #3498db;
+  cursor: pointer;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+.show-btn{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+input[type="checkbox"]{
+  display: none;
+}
+#show:checked ~ {
+  display: block;
+}
+ .close-btn{
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  font-size: 18px;
+  cursor: pointer;
+}
+ .close-btn:hover{
+  color: #3498db;
+}
+ .text{
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+}
+ .popup form{
+  margin-top: -20px;
+}
+ .popup form .data{
+  height: 45px;
+  width: 100%;
+  margin: 40px 0;
+}
+.popup form .data label{
+  font-size: 18px;
+  margin-right: 300px;
+  color: wheat;
+}
+.popup form .data input{
+  height: 100%;
+  width: 100%;
+  padding-left: 10px;
+  font-size: 17px;
+  border: 1px solid silver;
+}
+.popup form .data input:focus{
+  border-color: #3498db;
+  border-bottom-width: 2px;
+}
+.popup form .forgot-pass{
+  margin-top: -8px;
+}
+.popup form .forgot-pass a{
+  color: black;
+  text-decoration: none;
+  font-size: 16px;
+}
+.popup form .forgot-pass a:hover{
+  text-decoration: underline;
+}
+.popup form .btn{
+  margin: 30px 0;
+  height: 45px;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+.popup form .btn .inner{
+  height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  z-index: -1;
+  background: linear-gradient(115deg, black 10%, white 90%);
+  transition: all 0.4s;
+}
+.popup form .btn:hover .inner{
+  left: 0;
+}
+.popup form .btn button{
+  height: 100%;
+  width: 100%;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+.popup form .signup-link{
+  text-align: center;
+  font-size: 16px;
+}
+.popup form .signup-link a{
+  color: darkolivegreen;
+  text-decoration: none;
+  font-size: 16px;
+}
+.popup form .signup-link a:hover{
+  text-decoration: underline;
+}
