--- a/styles.css
+++ b/styles.css
@@ -740,7 +740,7 @@ input[type="checkbox"]{
   font-size: 16px;
 }
 .popup form .signup-link a{
-  color: darkolivegreen;
+  color: red;
   text-decoration: none;
   font-size: 16px;
 }
