--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* Created by Tivotal */
-
 /* Google Fonts(Poppins) */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
@@ -746,4 +744,15 @@ input[type="checkbox"]{
 }
 .popup form .signup-link a:hover{
   text-decoration: underline;
+}
+
+#Log-in{
+  margin-left: 2rem;
+  background-color: #333;
+  font-size: 1.75rem;
+  color: #fff;
+  cursor: pointer;
+}
+#Log-in:hover{
+  color: #3867d6;
 }
